.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/Cost_Center_User__c.object-meta.xml
<CustomObject>
    <label>Cost Center User</label>
    <nameField>
        <displayFormat>CCU-{000000}</displayFormat>
        <label>Cost Center User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Center Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>