.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/fields/Allow_Push_Notification__c.field-meta.xml
<CustomField>
    <fullName>Allow_Push_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to allow Notifications</inlineHelpText>
    <label>Allow Push Notification</label>
    <type>Checkbox</type>
</CustomField>