.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Cost Center Users</relationshipLabel>
    <relationshipName>Cost_Center_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>