.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/fields/Cost_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Name__c</fullName>
    <formula>Cost_Center__r.Name</formula>
    <label>Cost Center Name</label>
    <type>Text</type>
</CustomField>