.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the Primary Cost Center?</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>