.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select User for Cost Center</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Center_Users</relationshipName>
    <type>Lookup</type>
</CustomField>